<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travel Footprint</string>

    <string-array name="city_array">
        <item>花蓮縣</item>
        <item>台東縣</item>
        <item>宜蘭縣</item>
        <item>屏東縣</item>
        <item>台東縣</item>
        <item>高雄市</item>
        <item>雲林縣</item>
        <item>彰化縣</item>
        <item>臺南市</item>
        <item>嘉義縣</item>
        <item>嘉義市</item>
        <item>臺中市</item>
        <item>臺北市</item>
        <item>新竹縣</item>
        <item>新竹市</item>
        <item>基隆市</item>
        <item>苗栗縣</item>
        <item>桃園市</item>
        <item>南投縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="current_weather">Current Weather</string>
    <string name="intro1">Welcome to Mark\'s</string>
    <string name="intro2">Tourist Footprint</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="add_a_new_scene">Enter the detail</string>
    <string name="photo">Photo</string>
    <string name="input_date">日期:</string>
    <string name="thought">感受:</string>
    <string name="show_on_the_map">Show on the map</string>
    <string name="get_current_weather">Get Current Weather</string>

</resources>