<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:context="StartFragment">

            <TextView
                android:id="@+id/intro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/intro1"
                android:textAlignment="center"
                android:textSize="34sp" />
            <TextView
                android:id="@+id/intro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro2"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:backgroundTint="@color/common_google_signin_btn_text_light"
                android:text="@string/start" />
        </LinearLayout>
    </FrameLayout>
</layout>