<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="scene"
            type="com.example.roomexample.database.Scene" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintVertical_chainStyle="spread"
        tools:context=".AddFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_scene"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052" />

        <Spinner
            android:id="@+id/city_picker"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:paddingStart="12dp"
            app:layout_constraintStart_toStartOf="@+id/name_edit"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_baseline_add_location_alt_24"
            android:paddingStart="12dp"
            android:drawablePadding="12dp"
            android:hint="@string/name"
            android:text="@{scene.name}"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/city_picker" />

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_baseline_add_location_24"
            android:paddingStart="12dp"
            android:drawablePadding="12dp"
            android:hint="@string/address"
            android:text="@{scene.address}"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/name_edit" />

        <Button
            android:id="@+id/sel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:background="@drawable/gradient3"
            android:hint="@string/photo"
            app:layout_constraintStart_toStartOf="@+id/address_edit"
            app:layout_constraintTop_toBottomOf="@+id/address_edit" />

        <EditText
            android:id="@+id/descript_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_baseline_notes_24"
            android:paddingStart="12dp"
            android:drawablePadding="12dp"
            android:hint="@string/description"
            android:inputType="textMultiLine|textPersonName"
            android:text="@{scene.description}"
            app:layout_constraintTop_toBottomOf="@+id/sel_button" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:paddingStart="12dp"
            android:drawablePadding="12dp"
            android:hint="@string/date"
            android:inputType="date"
            android:text="@{scene.date}"
            app:layout_constraintTop_toBottomOf="@+id/descript_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>