<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="scene"
            type="com.example.roomexample.database.Scene" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient7"
        android:orientation="vertical"
        tools:context=".DetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@{scene.name}"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="10dp">
            <ImageView
                android:id="@+id/image_pic"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                app:asIcon="@{false}"
                app:setImage="@{scene}"
                tools:src="@drawable/photo1_1" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:padding="5dp"
                android:text="@string/input_date"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:padding="5dp"
                android:text="@{scene.date}"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="5dp"
                android:text="@string/thought"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:padding="5dp"
                android:text="@{scene.description}"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/map_button"
                android:background="@drawable/button_selector"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/show_on_the_map" />

            <Button
                android:id="@+id/weather_button"
                android:background="@drawable/button_selector"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/get_current_weather" />
        </LinearLayout>


    </LinearLayout>
</layout>